PCQ-1651 address sonarcloud code smells